applets/weather: fix dereference of the nullptr pointer

BUG: 506809

It is possible that forecast() call return nullptr pointer